src/k8s-manifests/pricechangewriterservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricechangewriterservice
spec:
  selector:
    matchLabels:
      app: pricechangewriterservice
  replicas: 1
  template:
    metadata:
      labels:
        app: pricechangewriterservice
    spec:
      containers:
        - image: "%%APP_DOCKER_IMAGE%%"
          imagePullPolicy: Always
          name: pricechangewriterservice
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 120
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 90
