src/k8s-manifests/local-pricechangewriter-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: pricechangewriterservice
  type: LoadBalancer
