src/k8s-manifests/local-pricechangewriterservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricechangewriterservice
  labels:
      app: pricechangewriterservice
spec:
  selector:
    matchLabels:
      app: pricechangewriterservice
  replicas: 1
  template:
    metadata:
      labels:
        app: pricechangewriterservice
    spec:
      containers:
        - image: kriskrishna/pricechangewriterservice:latest
          imagePullPolicy: Always
          name: pricechangecalculator-doservice
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pricechangewriterservice
  labels:
      app: pricechangewriterservice
spec:
  #externalTrafficPolicy: Local
  #type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    #name: http
  selector:
    app: pricechangewriterservice
